@@ -1,6 +1,14 @@
 Pending changes in the mainline
 ===============================
 
+* The plugin now filters out all unauthorized labels from the "Labels" fields
+  in the responses of these API routes:
+  - /tools/find
+  - /studies/{id} & similar routes
+  - /studies/{id}/series & similar routes
+  - /series/{id}/study & similar routes
+  - /series/{id}/labels & similar routes
+  In the past, this was only done in /tools/labels
 * Allow using the auth-plugin together with "AuthenticationEnabled": true.
   https://discourse.orthanc-server.org/t/user-based-access-control-with-label-based-resource-access/5454
 * Added a default permission for /auth/tokens/volview-viewer-publication
